Systems/GUI/Widgets/Toolbar/Widgets/Container/Web/GUIToolbarContainer.css
.GUIToolbarContainer {
    float: right;
    margin: 5px 10px 0px 0px;
    position: relative;
    font-family: verdana;
    font-size: 11px;
    height: 27px;
    line-height: 38px;
}

.GUIToolbarContainer div.inner-list {
    position: relative;
    overflow: hidden;
    list-style: none;
    white-space: nowrap;
    border: 1px solid;
    height: 25px;
    line-height: 25px;
    margin-right: -3px;
    padding: 0 3px;
    text-shadow: 0px -1px 1px #000;
    border-color: #222 #222 #3A3A3A;
    *border-left-color: #999; /* IE 7 Target */
    *border-right-color: #999; /* IE 7 Target */
    background-color: #282828;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #2C2C2C), color-stop(50%, #000));
    background-image: -moz-linear-gradient(top, #2C2C2C 15%, #000 50%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2C2C2C, endColorstr=#000000);
    -moz-border-radius: 14px;
    border-radius: 14px;
    -webkit-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
    -moz-box-shadow: rgba(0,0,0,1) 0px 0px 3px inset;
}

